--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: My amazing website
+title: My amazing website2
 
 # Your name to show in the footer
 author: Some Person
