--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ navbar-links:
   Resources:
     - Les livres sur le devops: #
     - Les livres sur l'IT en général: #
-  Inscrivez-vous: "https://rudeops.com"
+  
 
 
 ################
@@ -140,10 +140,10 @@ page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-navbar-col: "##FEFEFE"
+navbar-col: "#F5F5F5"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
-footer-col: "##FEFEFE"
+footer-col: "#F5F5F5"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 footer-hover-col: "#0085A1"
