--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ social-network-links:
   # whatsapp: 15551212
 #  medium: yourname
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: rudeops
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
