--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ navbar-links:
   Resources:
     - Les livres sur le devops: #
     - Les livres sur l'IT en général: #
-  
+  ❤ Support: "https://buymeacoffee.com/rudeops"
 
 
 ################
