Add rubrique favoris

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
   Les archives: "/archives"
   Resources:
     - Les livres sur le devops: "/devops-books"
-    - Les livres sur l'IT en général: #
+    - Nos Favoris: "/favoris"
   ❤ Support: "https://buymeacoffee.com/rudeops"
 
 
