--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: La newsletter RudeOps
+title: RudeOps, la newsletter de la tech et du devops
 
 # Your name to show in the footer
 author: RudeOps
